0032711: Coding Rules - new warning in AIS_Shape::Color() after integration fix for 0032704